# yt-downloader

./: .gitignore  main.py  pyproject.toml  Ничего нового (feat. noize mc)-9Y35Esi9lss.f248.webm.part
src/models/: ytdl.py
src/pyqt/: app.py  app.ui
src/pyqt/ui/: app.ui  app_ui.py  app_ui_new.py
src/ytdl/: Ytdl.py
